--- a/index.html
+++ b/index.html
@@ -3,54 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adalo Tier List</title>
+  <title>Simple Drag and Drop</title>
   <style>
-    .tier {
-      border: 1px solid #ccc;
-      padding: 10px;
-      margin: 10px 0;
-    }
     .images-list {
       min-height: 100px;
       border: 1px solid #ddd;
       padding: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
     }
     .image-item {
-      margin: 5px;
-      padding: 5px;
+      padding: 10px;
       border: 1px solid #aaa;
+      background-color: #f9f9f9;
+      cursor: grab;
     }
   </style>
 </head>
 <body>
-  <div class="tier" id="tier-id"> <!-- Replace tier-id with the actual tier ID or name -->
-    <div class="images-list" id="tier-images"> <!-- Replace tier-images with the actual image list ID -->
-      <!-- Images will be dynamically added here -->
-    </div>
+  <div class="images-list" id="item-images">
+    <!-- One item for drag and drop -->
+    <div class="image-item" id="item"></div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      var tierList = document.getElementById('tier-images'); // Replace with the actual ID used in each instance
-
-      // Sample data - Replace this with dynamic data from your Adalo database
-      var imageItems = [
-        { id: 'item1', name: 'Item 1' },
-        { id: 'item2', name: 'Item 2' },
-        { id: 'item3', name: 'Item 3' },
-        { id: 'item4', name: 'Item 4' },
-        { id: 'item5', name: 'Item 5' },
-      ];
-
-      // Dynamically add images to the list
-      imageItems.forEach(function(item) {
-        var div = document.createElement('div');
-        div.className = 'image-item';
-        div.id = item.id;
-        div.textContent = item.name;
-        tierList.appendChild(div);
-      });
+      var tierList = document.getElementById('item-images');
 
       // Initialize Sortable
       Sortable.create(tierList, {
@@ -60,31 +40,11 @@
           var fromIndex = evt.oldIndex;
           var toIndex = evt.newIndex;
 
-          // Placeholder for Adalo API call to update the order of the image
-          console.log('Image moved from index', fromIndex, 'to', toIndex);
-          // You can use Adalo's API or actions to update the database
-          // Example: updateOrder(itemEl.id, fromIndex, toIndex);
+          // Log the movement
+          console.log('Item moved from index', fromIndex, 'to', toIndex);
         },
       });
     });
-
-    // Function to update order in Adalo's database (example)
-    function updateOrder(itemId, fromIndex, toIndex) {
-      // Make an API call to update the item's order in the Adalo database
-      // fetch('https://api.adalo.com/v0/...', {
-      //   method: 'PATCH',
-      //   headers: {
-      //     'Content-Type': 'application/json',
-      //     'Authorization': 'Bearer YOUR_ADALO_API_KEY'
-      //   },
-      //   body: JSON.stringify({
-      //     fromIndex: fromIndex,
-      //     toIndex: toIndex
-      //   })
-      // }).then(response => response.json())
-      //   .then(data => console.log(data))
-      //   .catch(error => console.error('Error:', error));
-    }
   </script>
 </body>
 </html>
