--- a/draggable-images.html
+++ b/draggable-images.html
@@ -10,6 +10,7 @@
       gap: 10px;
       justify-content: center;
       flex-wrap: wrap;
+      margin: 20px;
     }
     .image-item {
       padding: 10px;
@@ -45,19 +46,6 @@
 
       // Initialize Sortable on the draggable items container
       Sortable.create(draggableItems, {
-        group: 'shared',
-        animation: 150,
-        sort: false, // Prevent sorting within the source container
-        onEnd: function (evt) {
-          var itemEl = evt.item;
-          var fromIndex = evt.oldIndex;
-          var toIndex = evt.newIndex;
-
-          // Log the movement
-          console.log('Item moved from index', fromIndex, 'to', toIndex);
-        },
-      });
-    });
-  </script>
-</body>
-</html>
+        group: {
+          name: 'shared',
+          pull
