--- a/draggable-images.html
+++ b/draggable-images.html
@@ -46,6 +46,19 @@
 
       // Initialize Sortable on the draggable items container
       Sortable.create(draggableItems, {
-        group: {
-          name: 'shared',
-          pull
+        group: 'shared',
+        animation: 150,
+        sort: false, // Prevent sorting within the source container
+        onEnd: function (evt) {
+          var itemEl = evt.item;
+          var fromIndex = evt.oldIndex;
+          var toIndex = evt.newIndex;
+
+          // Log the movement
+          console.log('Item moved from index', fromIndex, 'to', toIndex);
+        },
+      });
+    });
+  </script>
+</body>
+</html>
