--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Drag and Drop Tier List</title>
+  <title>Tier List Maker</title>
   <style>
     .container {
       display: flex;
@@ -12,18 +12,28 @@
       justify-content: center;
       padding: 20px;
     }
-    .drop-zone {
-      min-height: 200px;
-      border: 2px dashed #ddd;
-      padding: 20px;
-      margin: 20px;
+    .tier-container {
+      display: flex;
+      flex-direction: column;
       width: 100%;
+      gap: 10px;
+    }
+    .drop-zone {
+      min-height: 100px;
+      border: 2px dashed #ddd;
+      padding: 10px;
+      margin: 10px 0;
       display: flex;
       flex-direction: column;
       gap: 10px;
       align-items: center;
       justify-content: center;
       background-color: #f0f0f0;
+    }
+    .tier-label {
+      font-size: 18px;
+      font-weight: bold;
+      margin-bottom: 5px;
     }
     .draggable-items {
       display: flex;
@@ -52,8 +62,29 @@
 </head>
 <body>
   <div class="container">
-    <div class="drop-zone" id="tier-dropzone">
-      Drop items here
+    <div class="tier-container">
+      <!-- Drop zones for each tier -->
+      <div class="drop-zone" id="tier-s">
+        <div class="tier-label">S Tier</div>
+      </div>
+      <div class="drop-zone" id="tier-a">
+        <div class="tier-label">A Tier</div>
+      </div>
+      <div class="drop-zone" id="tier-b">
+        <div class="tier-label">B Tier</div>
+      </div>
+      <div class="drop-zone" id="tier-c">
+        <div class="tier-label">C Tier</div>
+      </div>
+      <div class="drop-zone" id="tier-d">
+        <div class="tier-label">D Tier</div>
+      </div>
+      <div class="drop-zone" id="tier-e">
+        <div class="tier-label">E Tier</div>
+      </div>
+      <div class="drop-zone" id="tier-f">
+        <div class="tier-label">F Tier</div>
+      </div>
     </div>
 
     <div class="draggable-items" id="draggable-items">
@@ -68,23 +99,26 @@
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      var dropZone = document.getElementById('tier-dropzone');
+      var dropZones = ['tier-s', 'tier-a', 'tier-b', 'tier-c', 'tier-d', 'tier-e', 'tier-f'];
       var draggableItems = document.getElementById('draggable-items');
 
-      // Initialize Sortable on the drop zone
-      Sortable.create(dropZone, {
-        group: 'shared',
-        animation: 150,
-        onAdd: function (evt) {
-          var itemEl = evt.item;
-          console.log('Item added:', itemEl.id);
-        },
-        onEnd: function (evt) {
-          var itemEl = evt.item;
-          var fromIndex = evt.oldIndex;
-          var toIndex = evt.newIndex;
-          console.log('Item moved from index', fromIndex, 'to', toIndex);
-        },
+      // Initialize Sortable on each drop zone
+      dropZones.forEach(function (zoneId) {
+        var dropZone = document.getElementById(zoneId);
+        Sortable.create(dropZone, {
+          group: 'shared',
+          animation: 150,
+          onAdd: function (evt) {
+            var itemEl = evt.item;
+            console.log('Item added to', zoneId, ':', itemEl.id);
+          },
+          onEnd: function (evt) {
+            var itemEl = evt.item;
+            var fromIndex = evt.oldIndex;
+            var toIndex = evt.newIndex;
+            console.log('Item moved in', zoneId, 'from index', fromIndex, 'to', toIndex);
+          },
+        });
       });
 
       // Initialize Sortable on the draggable items container
