--- a/index.html
+++ b/index.html
@@ -19,21 +19,25 @@
       gap: 10px;
     }
     .drop-zone {
-      min-height: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
       border: 2px dashed #ddd;
       padding: 10px;
       margin: 10px 0;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      align-items: center;
-      justify-content: center;
+      min-height: 100px;
       background-color: #f0f0f0;
     }
-    .tier-label {
-      font-size: 18px;
-      font-weight: bold;
-      margin-bottom: 5px;
+    .drop-zone .drop-content {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      flex-grow: 1;
+    }
+    .drop-zone img {
+      max-width: 40px;
+      max-height: 40px;
     }
     .draggable-items {
       display: flex;
@@ -65,25 +69,46 @@
     <div class="tier-container">
       <!-- Drop zones for each tier -->
       <div class="drop-zone" id="tier-s">
-        <div class="tier-label">S Tier</div>
+        <div class="drop-content">
+          <img src="https://via.placeholder.com/40" alt="S">
+          <span>S</span>
+        </div>
       </div>
       <div class="drop-zone" id="tier-a">
-        <div class="tier-label">A Tier</div>
+        <div class="drop-content">
+          <img src="https://via.placeholder.com/40" alt="A">
+          <span>A</span>
+        </div>
       </div>
       <div class="drop-zone" id="tier-b">
-        <div class="tier-label">B Tier</div>
+        <div class="drop-content">
+          <img src="https://via.placeholder.com/40" alt="B">
+          <span>B</span>
+        </div>
       </div>
       <div class="drop-zone" id="tier-c">
-        <div class="tier-label">C Tier</div>
+        <div class="drop-content">
+          <img src="https://via.placeholder.com/40" alt="C">
+          <span>C</span>
+        </div>
       </div>
       <div class="drop-zone" id="tier-d">
-        <div class="tier-label">D Tier</div>
+        <div class="drop-content">
+          <img src="https://via.placeholder.com/40" alt="D">
+          <span>D</span>
+        </div>
       </div>
       <div class="drop-zone" id="tier-e">
-        <div class="tier-label">E Tier</div>
+        <div class="drop-content">
+          <img src="https://via.placeholder.com/40" alt="E">
+          <span>E</span>
+        </div>
       </div>
       <div class="drop-zone" id="tier-f">
-        <div class="tier-label">F Tier</div>
+        <div class="drop-content">
+          <img src="https://via.placeholder.com/40" alt="F">
+          <span>F</span>
+        </div>
       </div>
     </div>
 
