--- a/index.html
+++ b/index.html
@@ -5,28 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tier List Maker</title>
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+    }
     .container {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
+      flex-direction: row;
+      height: 100vh;
     }
     .tier-container {
       display: flex;
       flex-direction: column;
-      width: 100%;
-      gap: 10px;
+      flex: 1;
+      padding: 20px;
+      overflow-y: auto;
     }
     .drop-zone {
       display: flex;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: center;
       border: 2px dashed #ddd;
       padding: 10px;
       margin: 10px 0;
-      min-height: 100px;
+      min-height: 40px;
       background-color: #f0f0f0;
+      cursor: pointer;
     }
     .drop-zone .drop-content {
       display: flex;
@@ -36,15 +41,14 @@
       flex-grow: 1;
     }
     .drop-zone img {
-      max-width: 40px;
-      max-height: 40px;
+      max-width: 30px;
+      max-height: 30px;
     }
     .draggable-items {
       display: flex;
+      flex-direction: column;
       gap: 10px;
-      justify-content: center;
-      flex-wrap: wrap;
-      margin: 20px;
+      padding: 20px;
     }
     .image-item {
       padding: 10px;
@@ -52,8 +56,8 @@
       background-color: #f9f9f9;
       cursor: grab;
       text-align: center;
-      width: 80px;
-      height: 80px;
+      width: 60px;
+      height: 60px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -66,58 +70,58 @@
 </head>
 <body>
   <div class="container">
+    <div class="draggable-items">
+      <!-- Draggable items -->
+      <div class="image-item" id="item1"><img src="https://via.placeholder.com/60" alt="Image 1"></div>
+      <div class="image-item" id="item2"><img src="https://via.placeholder.com/60" alt="Image 2"></div>
+      <div class="image-item" id="item3"><img src="https://via.placeholder.com/60" alt="Image 3"></div>
+      <div class="image-item" id="item4"><img src="https://via.placeholder.com/60" alt="Image 4"></div>
+    </div>
+
     <div class="tier-container">
       <!-- Drop zones for each tier -->
       <div class="drop-zone" id="tier-s">
         <div class="drop-content">
-          <img src="https://via.placeholder.com/40" alt="S">
+          <img src="https://via.placeholder.com/30" alt="S">
           <span>S</span>
         </div>
       </div>
       <div class="drop-zone" id="tier-a">
         <div class="drop-content">
-          <img src="https://via.placeholder.com/40" alt="A">
+          <img src="https://via.placeholder.com/30" alt="A">
           <span>A</span>
         </div>
       </div>
       <div class="drop-zone" id="tier-b">
         <div class="drop-content">
-          <img src="https://via.placeholder.com/40" alt="B">
+          <img src="https://via.placeholder.com/30" alt="B">
           <span>B</span>
         </div>
       </div>
       <div class="drop-zone" id="tier-c">
         <div class="drop-content">
-          <img src="https://via.placeholder.com/40" alt="C">
+          <img src="https://via.placeholder.com/30" alt="C">
           <span>C</span>
         </div>
       </div>
       <div class="drop-zone" id="tier-d">
         <div class="drop-content">
-          <img src="https://via.placeholder.com/40" alt="D">
+          <img src="https://via.placeholder.com/30" alt="D">
           <span>D</span>
         </div>
       </div>
       <div class="drop-zone" id="tier-e">
         <div class="drop-content">
-          <img src="https://via.placeholder.com/40" alt="E">
+          <img src="https://via.placeholder.com/30" alt="E">
           <span>E</span>
         </div>
       </div>
       <div class="drop-zone" id="tier-f">
         <div class="drop-content">
-          <img src="https://via.placeholder.com/40" alt="F">
+          <img src="https://via.placeholder.com/30" alt="F">
           <span>F</span>
         </div>
       </div>
-    </div>
-
-    <div class="draggable-items" id="draggable-items">
-      <!-- Draggable items -->
-      <div class="image-item" id="item1"><img src="https://via.placeholder.com/80" alt="Image 1"></div>
-      <div class="image-item" id="item2"><img src="https://via.placeholder.com/80" alt="Image 2"></div>
-      <div class="image-item" id="item3"><img src="https://via.placeholder.com/80" alt="Image 3"></div>
-      <div class="image-item" id="item4"><img src="https://via.placeholder.com/80" alt="Image 4"></div>
     </div>
   </div>
 
@@ -125,7 +129,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       var dropZones = ['tier-s', 'tier-a', 'tier-b', 'tier-c', 'tier-d', 'tier-e', 'tier-f'];
-      var draggableItems = document.getElementById('draggable-items');
+      var draggableItems = document.querySelector('.draggable-items');
 
       // Initialize Sortable on each drop zone
       dropZones.forEach(function (zoneId) {
