--- a/index.html
+++ b/index.html
@@ -11,52 +11,51 @@
       font-family: Arial, sans-serif;
     }
     .container {
-      width: 745px;
-      margin: 0 auto;
       display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: flex-start;
-      padding: 20px;
-      box-sizing: border-box;
+      flex-direction: column;
+      align-items: center;
+      padding: 10px;
     }
     .tier-container {
       display: flex;
       flex-direction: column;
+      align-items: center;
       gap: 10px;
-      flex: 1;
-      overflow-y: auto;
+      width: 100%;
+      max-width: 745px; /* Limit to 745px width */
+      margin-top: 20px;
+      overflow-x: hidden; /* Hide horizontal overflow */
     }
     .drop-zone {
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
+      min-height: 30px; /* Adjusted height */
       border: 2px dashed #ddd;
       padding: 10px;
       margin: 10px 0;
-      min-height: 40px;
-      background-color: #f0f0f0;
-      cursor: pointer;
-      width: calc(100% - 60px); /* Adjust width to fit within the container */
-    }
-    .drop-zone .drop-content {
       display: flex;
+      flex-direction: column;
+      gap: 5px;
       align-items: center;
-      justify-content: flex-start;
-      gap: 10px;
-      flex-grow: 1;
+      justify-content: center;
+      background-color: #f0f0f0;
+      width: 100%;
+    }
+    .drop-zone .tier-label {
+      font-size: 18px;
+      font-weight: bold;
+      margin-bottom: 5px;
     }
     .drop-zone img {
-      max-width: 30px;
-      max-height: 30px;
-      margin-right: 10px; /* Spacing between image and label */
+      max-width: 50px; /* Adjust size of the letter image */
+      max-height: 50px;
     }
     .draggable-items {
       display: flex;
-      flex-direction: column;
       gap: 10px;
-      padding: 20px;
-      width: 60px; /* Width for draggable items container */
+      justify-content: center;
+      flex-wrap: wrap;
+      margin: 20px;
+      width: 100%;
+      max-width: 745px; /* Limit to 745px width */
     }
     .image-item {
       padding: 10px;
@@ -64,8 +63,8 @@
       background-color: #f9f9f9;
       cursor: grab;
       text-align: center;
-      width: 40px;
-      height: 40px;
+      width: 80px;
+      height: 80px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -78,58 +77,44 @@
 </head>
 <body>
   <div class="container">
-    <div class="draggable-items" id="draggable-items">
-      <!-- Draggable items -->
-      <div class="image-item" id="item1"><img src="https://via.placeholder.com/40" alt="Image 1"></div>
-      <div class="image-item" id="item2"><img src="https://via.placeholder.com/40" alt="Image 2"></div>
-      <div class="image-item" id="item3"><img src="https://via.placeholder.com/40" alt="Image 3"></div>
-      <div class="image-item" id="item4"><img src="https://via.placeholder.com/40" alt="Image 4"></div>
-    </div>
-
     <div class="tier-container">
       <!-- Drop zones for each tier -->
       <div class="drop-zone" id="tier-s">
-        <div class="drop-content">
-          <img src="https://via.placeholder.com/30" alt="S">
-          <span>S Tier</span>
-        </div>
+        <img src="https://via.placeholder.com/50" alt="S">
+        <div class="tier-label">S Tier</div>
       </div>
       <div class="drop-zone" id="tier-a">
-        <div class="drop-content">
-          <img src="https://via.placeholder.com/30" alt="A">
-          <span>A Tier</span>
-        </div>
+        <img src="https://via.placeholder.com/50" alt="A">
+        <div class="tier-label">A Tier</div>
       </div>
       <div class="drop-zone" id="tier-b">
-        <div class="drop-content">
-          <img src="https://via.placeholder.com/30" alt="B">
-          <span>B Tier</span>
-        </div>
+        <img src="https://via.placeholder.com/50" alt="B">
+        <div class="tier-label">B Tier</div>
       </div>
       <div class="drop-zone" id="tier-c">
-        <div class="drop-content">
-          <img src="https://via.placeholder.com/30" alt="C">
-          <span>C Tier</span>
-        </div>
+        <img src="https://via.placeholder.com/50" alt="C">
+        <div class="tier-label">C Tier</div>
       </div>
       <div class="drop-zone" id="tier-d">
-        <div class="drop-content">
-          <img src="https://via.placeholder.com/30" alt="D">
-          <span>D Tier</span>
-        </div>
+        <img src="https://via.placeholder.com/50" alt="D">
+        <div class="tier-label">D Tier</div>
       </div>
       <div class="drop-zone" id="tier-e">
-        <div class="drop-content">
-          <img src="https://via.placeholder.com/30" alt="E">
-          <span>E Tier</span>
-        </div>
+        <img src="https://via.placeholder.com/50" alt="E">
+        <div class="tier-label">E Tier</div>
       </div>
       <div class="drop-zone" id="tier-f">
-        <div class="drop-content">
-          <img src="https://via.placeholder.com/30" alt="F">
-          <span>F Tier</span>
-        </div>
+        <img src="https://via.placeholder.com/50" alt="F">
+        <div class="tier-label">F Tier</div>
       </div>
+    </div>
+
+    <div class="draggable-items" id="draggable-items">
+      <!-- Draggable items -->
+      <div class="image-item" id="item1"><img src="https://via.placeholder.com/80" alt="Image 1"></div>
+      <div class="image-item" id="item2"><img src="https://via.placeholder.com/80" alt="Image 2"></div>
+      <div class="image-item" id="item3"><img src="https://via.placeholder.com/80" alt="Image 3"></div>
+      <div class="image-item" id="item4"><img src="https://via.placeholder.com/80" alt="Image 4"></div>
     </div>
   </div>
 
@@ -137,7 +122,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       var dropZones = ['tier-s', 'tier-a', 'tier-b', 'tier-c', 'tier-d', 'tier-e', 'tier-f'];
-      var draggableItems = document.querySelector('.draggable-items');
+      var draggableItems = document.getElementById('draggable-items');
 
       // Initialize Sortable on each drop zone
       dropZones.forEach(function (zoneId) {
