--- a/index.html
+++ b/index.html
@@ -11,63 +11,73 @@
       font-family: Arial, sans-serif;
     }
     .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 10px;
-    }
-    .tier-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      align-items: center;
-      justify-content: center;
-      padding: 10px;
-    }
-    .drop-zone {
-      min-height: 30px; /* Adjusted height */
-      border: 2px dashed #ddd;
-      padding: 10px;
-      margin: 10px;
-      display: flex;
-      flex-direction: column;
-      gap: 5px;
-      align-items: center;
-      justify-content: center;
-      background-color: #f0f0f0;
-      width: calc(100% / 7); /* Adjust width based on the number of tiers */
-      max-width: 100px; /* Example max width */
-    }
-    .drop-zone img {
-      max-width: 50px; /* Adjust size of the letter image */
-      max-height: 50px;
-      margin-right: 10px; /* Add spacing between image and drop zone */
-    }
-    .draggable-items {
-      display: flex;
-      gap: 10px;
-      justify-content: center;
-      flex-wrap: wrap;
-      margin: 20px;
-      width: 100%;
-      max-width: 745px; /* Limit to 745px width */
-    }
-    .image-item {
-      padding: 10px;
-      border: 1px solid #aaa;
-      background-color: #f9f9f9;
-      cursor: grab;
-      text-align: center;
-      width: 80px;
-      height: 80px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .image-item img {
-      max-width: 100%;
-      max-height: 100%;
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  max-width: 1000px; /* Adjust maximum width of the container */
+}
+
+.tier-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-items: flex-start; /* Align items to the start */
+  justify-content: center;
+  padding: 10px;
+  width: 100%;
+}
+
+.drop-zone {
+  min-height: 30px; /* Adjusted height */
+  border: 2px dashed #ddd;
+  padding: 10px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
+  background-color: #f0f0f0;
+  width: calc((100% - 120px) / 7); /* Adjusted width for drop zones */
+  max-width: 120px; /* Example max width */
+  text-align: center; /* Center the content */
+}
+
+.drop-zone img {
+  max-width: 50px; /* Adjust size of the letter image */
+  max-height: 50px;
+  margin-right: 10px; /* Add spacing between image and drop zone */
+}
+
+.draggable-items {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 20px;
+  width: 100%;
+  max-width: 745px; /* Limit to 745px width */
+}
+
+.image-item {
+  padding: 10px;
+  border: 1px solid #aaa;
+  background-color: #f9f9f9;
+  cursor: grab;
+  text-align: center;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-item img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
   </style>
 </head>
 <body>
