--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
       max-width: 745px;
     }
     .image-item {
-      padding: 10px;
+      padding: 5px; /* Adjust padding */
       border: 1px solid #aaa;
       background-color: #f9f9f9;
       cursor: grab;
       text-align: center;
-      width: 50px;
-      height: 50px;
+      width: 30px; /* Adjust width */
+      height: 30px; /* Adjust height */
       display: flex;
       align-items: center;
       justify-content: center;
@@ -124,10 +124,10 @@
 
   <div class="draggable-items" id="draggable-items">
     <!-- Draggable items -->
-    <div class="image-item" id="item1"><img src="https://ibb.co/c8f6PBD" alt="Image 1"></div>
-    <div class="image-item" id="item2"><img src="https://ibb.co/NrBXJK9" alt="Image 2"></div>
-    <div class="image-item" id="item3"><img src="https://ibb.co/z6mG9ht" alt="Image 3"></div>
-    <div class="image-item" id="item4"><img src="https://ibb.co/BgFGtwr" alt="Image 4"></div>
+    <div class="image-item" id="item1"><img src="https://via.placeholder.com/30" alt="Image 1"></div>
+    <div class="image-item" id="item2"><img src="https://via.placeholder.com/30" alt="Image 2"></div>
+    <div class="image-item" id="item3"><img src="https://via.placeholder.com/30" alt="Image 3"></div>
+    <div class="image-item" id="item4"><img src="https://via.placeholder.com/30" alt="Image 4"></div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
