--- a/index.html
+++ b/index.html
@@ -123,12 +123,13 @@
   </div>
 
   <div class="draggable-items" id="draggable-items">
-    <!-- Draggable items -->
-    <div class="image-item" id="item1"><img src="https://via.placeholder.com/30" alt="Image 1"></div>
-    <div class="image-item" id="item2"><img src="https://via.placeholder.com/30" alt="Image 2"></div>
-    <div class="image-item" id="item3"><img src="https://via.placeholder.com/30" alt="Image 3"></div>
-    <div class="image-item" id="item4"><img src="https://via.placeholder.com/30" alt="Image 4"></div>
-  </div>
+  <!-- Draggable items -->
+  <div class="image-item" id="item1"><img src="https://via.placeholder.com/30.png" alt="Image 1"></div>
+  <div class="image-item" id="item2"><img src="https://via.placeholder.com/30.png" alt="Image 2"></div>
+  <div class="image-item" id="item3"><img src="https://via.placeholder.com/30.png" alt="Image 3"></div>
+  <div class="image-item" id="item4"><img src="https://via.placeholder.com/30.png" alt="Image 4"></div>
+</div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
   <script>
