--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     }
     .drop-zone {
       min-height: 30px;
+      min-width: 200px;
       border: 2px dashed #ddd;
       padding: 10px;
       margin-left: 10px;
