--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
     .drop-zone {
       min-height: 30px;
-      min-width: 200px;
+      min-width: 300px;
       border: 2px dashed #ddd;
       padding: 10px;
       margin-left: 10px;
@@ -165,4 +165,4 @@
     });
   </script>
 </body>
-</html>
+</html
