--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       margin-left: 10px;
       flex: 1;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       gap: 5px;
       align-items: center;
       justify-content: center;
