--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       flex: 1;
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap; /* Items wrap onto new line */
       gap: 5px;
       align-items: center;
-      justify-content: center;
       background-color: #f0f0f0;
     }
     .drop-zone img {
