--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
     .tier-row {
       display: flex;
       align-items: center;
-      margin-bottom: 10px;
+      position: relative;
+      margin-bottom: 20px;
     }
     .tier-label {
+      position: absolute;
       width: 50px; /* Adjust as needed */
       height: 50px; /* Adjust as needed */
       margin-right: 10px;
     }
     .drop-zone {
+      position: relative;
       min-height: 30px;
       min-width: 250px;
       border: 2px dashed #ddd;
