--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
 <body>
   <div class="container">
     <div class="tier-row">
+      <div class="drop-zone-container">
       <img class="tier-label" src="https://via.placeholder.com/50" alt="S">
       <div class="drop-zone" id="tier-s">
         <!-- Drop zone content here -->
       </div>
+    </div>
     </div>
     
     <div class="tier-row">
