--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       margin-bottom: 10px;
     }
     .tier-label {
-      width: 50px; /* Adjust as needed */
-      height: 50px; /* Adjust as needed */
+      align-self: flex-start; /* Align to the start (top) of the flex container */
+      justify-self: flex-start; /* Align to the start (left) of the flex container */
       margin-right: 10px;
     }
     .drop-zone {
