--- a/save-tierlist.html
+++ b/save-tierlist.html
@@ -10,12 +10,12 @@
     <script>
         // Your web app's Firebase configuration
         var firebaseConfig = {
-            apiKey: "YOUR_FIREBASE_API_KEY",
-            authDomain: "YOUR_FIREBASE_AUTH_DOMAIN",
-            projectId: "YOUR_FIREBASE_PROJECT_ID",
-            storageBucket: "YOUR_FIREBASE_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_FIREBASE_MESSAGING_SENDER_ID",
-            appId: "YOUR_FIREBASE_APP_ID"
+            apiKey: "AIzaSyDISnLPkB70IXOkfb75q6O4uzEzNL8MxBg",
+            authDomain: "tiermaster-f3139.firebaseapp.com",
+            projectId: "tiermaster-f3139",
+            storageBucket: "tiermaster-f3139.appspot.com",
+            messagingSenderId: "824666624032",
+            appId: "1:824666624032:web:7b064958baa558811bec45",
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
