--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
       padding: 10px;
     }
     .tier-row {
+	position:relative;
       display: flex;
       align-items: center;
       margin-bottom: 10px;
     }
     .tier-label {
+	position: absolute; /* Add absolute position */
 	max-width: 30px;
 	max-height: 30px;
       align-self: flex-start; /* Align to the start (top) of the flex container */
