--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     }
     .drop-zone {
       min-height: 30px;
-      min-width: 180px;
-      max-width: 250px;
+     width: 220px; /* Fixed width */
       border: 2px dashed #ddd;
       padding: 10px;
       margin-left: 10px;
