--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       flex-direction: column;
       align-items: center;
       padding: 10px;
+	width: 100vw; /* Full width */
     }
     .tier-row {
       display: flex;
@@ -30,7 +31,7 @@
     }
     .drop-zone {
       min-height: 30px;
-     width: 220px; /* Fixed width */
+     width: 60vw; /* Fixed width */
       border: 2px dashed #ddd;
       padding: 10px;
       margin-left: 10px;
