--- a/index.html
+++ b/index.html
@@ -78,16 +78,6 @@
       max-width: 100%;
       max-height: 100%;
     }
-    .save-button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-    }
   </style>
 </head>
 <body>
@@ -149,8 +139,6 @@
     <div class="image-item" id="item4"><img src="https://via.placeholder.com/30" alt="Image 4"></div>
   </div>
 
-  <button class="save-button" id="save-button">Save</button>
-
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
   <script>
   document.addEventListener('DOMContentLoaded', function () {
@@ -191,7 +179,7 @@
       },
     });
 
-    document.getElementById('save-button').addEventListener('click', function () {
+    window.saveTierList = function () {
       var tierData = {};
 
       dropZones.forEach(function (zoneId) {
@@ -203,23 +191,8 @@
       });
 
       console.log('Tier Data:', tierData);
-
-      fetch('YOUR_ADALO_DATABASE_API_ENDPOINT', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-          'Authorization': 'Bearer YOUR_ADALO_API_KEY'
-        },
-        body: JSON.stringify(tierData)
-      })
-      .then(response => response.json())
-      .then(data => {
-        console.log('Success:', data);
-      })
-      .catch((error) => {
-        console.error('Error:', error);
-      });
-    });
+      // You can use the tierData variable in Adalo's button action
+    };
   });
   </script>
 </body>
