--- a/diablo.html
+++ b/diablo.html
@@ -66,8 +66,8 @@
       background-color: #f9f9f9;
       cursor: grab;
       text-align: center;
-      width: 25vw;
-      height: 25vw;
+      width: auto;
+      height: auto;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -76,6 +76,7 @@
     .image-item img {
       max-width: 100%;
       max-height: 100%;
+      border: none;
     }
   </style>
 </head>
